5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1758_1577.log
== TEST (2019-05-23 11:29:31) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= array(int(input("insira os instantes: ")))
q=size(t)
c=arange(q)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:34:30) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= array(int(input("insira os instantes: ")))
d=(a*(t**2))/2+v
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:40) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= array(int(input("insira os instantes: ")))
n=arange(t)
d=(a*(t**2))/2+v
print(d.n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:46) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= array(int(input("insira os instantes: ")))
n=arange(t)
d=(a*(t**2))/2+v
print(d,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:38:06) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= array(int(input("insira os instantes: ")))
n=arange(t)
d=(a*(t**2))/2+v
print(d,n)
print(n*d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:38:40) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= array(int(input("insira os instantes: ")))
n=arange(t)
d=(a*(t**2))/2+v
print(d,n)
print(n+d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:38:49) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= array(int(input("insira os instantes: ")))
n=arange(t)
d=(a*(t**2))/2+v
print(d,n)
print(n+d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:39:23) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= array(int(input("insira os instantes: ")))
n=arange(t)
d=(a*(t**2))/2+v*n
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:40:26) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= int(input("insira os instantes: ")))
n=arange(t)
d=(a*(t**2))/2+v
print(d*n)
-- ERROR:
File "XXXX", line 4
    t= int(input()))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:40:32) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= int(input("insira os instantes: "))
n=arange(t)
d=(a*(t**2))/2+v
print(d*n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:41:00) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= int(input("insira os instantes: "))
n=arange(t)
d=(a*(n**2))/2+v
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:41:14) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= int(input("insira os instantes: "))
n=arange(t)
d=(a*(n**2))/2+v*n
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:41:23) 
-- CODE:
from numpy import*
a=float(input("insira a aceleracao do carro: "))
v=float(input("insira a velocidade inicial do carro: "))
t= int(input("insira os instantes: "))
n=arange(t)
d=(a*(n**2))/2+v*n
print(d)
-- EXECUTION TIME:
0.335099
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
